<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        
        <variable
            name="testmodel"
            type="com.task.mathongo.ui.marks.models.TestScore" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                android:onClick="@{()->testmodel.showDropDown(dropdownoption)}"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/testName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_weight="3"
                            android:text="@{testmodel.testName}"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_calendar_lite"/>
                            <TextView
                                android:id="@+id/date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="6dp"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                app:datebinder="@{testmodel.createdAt}"
                                tools:ignore="RtlCompat" />
                        </LinearLayout>



                        <TextView
                            android:id="@+id/options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:onClick="@{()->testmodel.showDropDown(dropdownoption)}"
                            android:drawableStart="@drawable/ic_options"
                            android:drawableLeft="@drawable/ic_options"
                            android:gravity="center_vertical" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/test_series"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/test_series"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="6dp"
                            android:text="@{testmodel.testSeries}"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/ic_physics"
                                android:drawableLeft="@drawable/ic_physics"
                                android:drawablePadding="4dp"
                                android:text="@string/physics"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/physismarks"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{testmodel.scores.physics+`/100`}"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/ic_chemistry"
                                android:drawableLeft="@drawable/ic_chemistry"
                                android:drawablePadding="4dp"
                                android:text="@string/chemistry"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/chemistrymarks"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{testmodel.scores.chemistry+`/100`}"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/ic_maths"
                                android:drawableLeft="@drawable/ic_maths"
                                android:drawablePadding="4dp"
                                android:text="@string/maths"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/mathsmarks"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{testmodel.scores.physics+`/100`}"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawablePadding="4dp"

                                android:text="Total"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                app:chemistryMarks="@{testmodel.scores.chemistry}"
                                app:math="@{testmodel.scores.mathematics}"
                                app:physicsmarks="@{testmodel.scores.physics}" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/dropdownoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:visibility="gone"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="14dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/editbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_edit"
                        android:drawableLeft="@drawable/ic_edit"
                        android:drawablePadding="6dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/edit"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/deletebtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_delete"
                        android:drawableLeft="@drawable/ic_delete"
                        android:drawablePadding="6dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/delete"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
